<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:background="@drawable/background_des">

    <ImageView
        android:id="@+id/editproductimageView"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button_chosePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addpicture"
        />

    <EditText
        android:id="@+id/productNameDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/waffle"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        android:hint="@string/nameOfProduct" />

    <EditText
        android:id="@+id/productDescriptonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/waffle"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:hint="@string/discriptionOfProduct" />

    <EditText
        android:id="@+id/productPriceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/waffle"
        android:layout_marginRight="4dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:hint="@string/priceOfProduct" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:fontFamily="@font/waffle"
            android:textSize="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="16dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:fontFamily="@font/waffle"
            android:textSize="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="16dp"
            android:text="@string/edit" />

    </LinearLayout>
</LinearLayout>